fixed profile pic blurred image

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@ background-color: #f6facf;
 
 .custom-card {
   background: none; /* Remove background color */
-  border: none; /* Remove border */
+  border: none; /*Remove border */
   box-shadow: none; /* Remove shadow if present */
   margin: 0; /* Remove default margin */
 }
@@ -133,3 +133,51 @@ background-color: #f6facf;
     font-size: larger;
     font-weight: bold;
   }
+
+
+  /* Cover.css */
+
+@keyframes rockingAnimation {
+  0%, 100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-20px); /* Adjust the distance of rocking */
+  }
+}
+
+.rocking-caret {
+  animation: rockingAnimation 2.5s infinite; /* Adjust the animation duration as needed */
+  color: #ffa600;
+}
+
+.social-link {
+  display: inline-block;
+  transition: transform 0.3s, font-size 0.3s, color 0.3s;
+}
+
+.social-link:hover {
+  transform: scale(1.5); /* Increase size on hover */
+  color: #FF5733; /* Change color on hover */
+}
+
+/* Define the animation */
+@keyframes nameAnimation {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    opacity: 0.5;
+    transform: scale(1.3);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* Apply the animation on hover */
+.disappearing-name:hover {
+  animation: nameAnimation 1s ease-in-out;
+}
